Fixing spark styling on mobile

--- a/src/css/story/spark.styl
+++ b/src/css/story/spark.styl
@@ -44,6 +44,7 @@
       font-weight 700
       //text-transform uppercase
       font-size 20px
+      padding 0 1rem
       +mq('bp-6')
         margin-left 0
 
